BJS2-71004
Второе решение для проверки